--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About</title>
+<title>ABOUT ME</title>
 
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -247,7 +247,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Home</a>
+      <a class="navbar-brand" href="index.html">NIKLAS HESS</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -255,7 +255,7 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
+  <a href="about.html">ABOUT ME</a>
 </li>
 <li>
   <a href="mailto:&lt;nh2706@cumc.columbia.edu&gt;">
@@ -290,17 +290,15 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About</h1>
+<h1 class="title toc-ignore">ABOUT ME</h1>
 
 </div>
 
 
-<div id="about-this-site" class="section level3">
-<h3>About this site</h3>
-<p>Sometimes you need to say a bit about the site – how it was made,
-where it’s hosted, where the source code can be found.</p>
-<p>If this is for a project or analysis, I recommend giving some details
-about the R package versions that you used to create the content.</p>
+<div id="academic-and-professional-experience" class="section level3">
+<h3>Academic and professional experience</h3>
+<p>For business or personal inquiries, please reach out via Email or
+LinkedIn</p>
 <p><img src="images/Resume_NiklasHess.pdf" style="width:100%"></p>
 </div>
 
