Data Cleaning and first graph included.

--- a/about.html
+++ b/about.html
@@ -258,6 +258,9 @@ $(document).ready(function () {
   <a href="about.html">ABOUT ME</a>
 </li>
 <li>
+  <a href="dashboard.html">DASHBOARD</a>
+</li>
+<li>
   <a href="mailto:&lt;nh2706@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
