Updates to personal description and in-text links.

--- a/about.html
+++ b/about.html
@@ -300,8 +300,10 @@ $(document).ready(function () {
 
 <div id="academic-and-professional-experience" class="section level3">
 <h3>Academic and professional experience</h3>
-<p>For business or personal inquiries, please reach out via Email or
-LinkedIn</p>
+<p>For business or personal inquiries, please reach out via <strong><a
+href="mailto:%3Cnh2706@cumc.columbia.edu%3E">Email</a></strong> or
+<strong><a
+href="https://www.linkedin.com/in/niklas-hess/">LinkedIn</a></strong>.</p>
 <p><img src="images/Resume_NiklasHess.pdf" style="width:100%"></p>
 </div>
 
